point php away from example

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 <body>
 <div class="container">
 <form 
-    action="https://jayagra.com/scout/main.php"
+    action="main.php"
     target="_self"
     method="POST"
     name="mainForm"
