--- a/pit.html
+++ b/pit.html
@@ -7,7 +7,7 @@
 <body>
 <div class="container">
 <form 
-    action="https://jayagra.com/scout/pit.php"
+    action="pit.php"
     target="_self"
     method="POST"
     name="mainForm"
