--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 <body>
 <div class="container">
 <form 
-    action="main.php"
+    action="https://jayagra.com/scout/main.php"
     target="_self"
     method="POST"
     name="mainForm"
@@ -108,14 +108,14 @@ id="psw1"
 required>
 </fieldset>-->
 <fieldset>
-    <label for="Event Code">Event Code</label><br>
+    <label for="Event Code">Event Code <span style="color:red">*</span></label><br>
 <select name="entry.event" required>
     <option value="CADA">CADA - Sacramento Regional</option>
     <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
 </select>
 </fieldset>
 <fieldset>
-<label for="Your Name">Your Name<br></label>
+<label for="Your Name">Your Name <span style="color:red">*</span><br></label>
 <input
 placeholder="Amon Gus"
 type="text"
@@ -124,7 +124,7 @@ required>
 </fieldset>
 
 <fieldset>
-<label for="Number of the Team you are Scouting">Number of the Team you are Scouting<br></label>
+<label for="Number of the Team you are Scouting">Number of the Team you are Scouting <span style="color:red">*</span><br></label>
 <input
     placeholder="766"
     type="number"
@@ -141,15 +141,17 @@ required>
     >
 </fieldset>
 <fieldset>
-    <label for="Match Number">Match Number<br></label>
+    <label for="Match Number">Match Number <span style="color:red">*</span><br></label>
     <input
         placeholder="01"
         type="number"
         name="entry.508602665"
+        required
         >
     <select name="entry.matchlvl">
-        <option value="qual">Qual</option>
         <option value="playoff">Playoff</option>
+        <option value="qual">Qual</option>
+        <option value="practice">Practice</option>
     </select>
 </fieldset><br>
 <h2>Match Scouting</h2><h4 style="color: #a9a9a9;">&emsp;Record as the game goes on</h4>
@@ -183,20 +185,11 @@ value="0"
 name="missedlower"
 ><br>
 <button onclick="incValueMissedLower()" type="button" style="width: 9rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
-Bars attempted:<br><input
-id="barsatt"
-type="text"
-value="0"
-name="barsatt"
-><br>
-<button onclick="incValueBarsAtt()" type="button"  style="width: 9rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
-Bars climbed:<br><input
-id="barsdone"
-type="text"
-value="0"
-name="barsdone"
-><br>
-<button onclick="incValueBarsDone()" type="button"  style="width: 9rem; margin-top: 0.35rem; font-size: xx-large;">⟰</button><br>
+Bars climbed:<br>
+<select name="barsdone"><option value="none">No Bars</option><option value="low">Low Bar</option><option value="mid">Mid Bar</option><option value="high">High Bar</option><option value="trav">Traversal Bar</option></select><br>
+Bars attempted:<br>
+<select name="barsatt"><option value="none">No Bars</option><option value="low">Low Bar</option><option value="mid">Mid Bar</option><option value="high">High Bar</option><option value="trav">Traversal Bar</option></select>
+<br>
 </fieldset>
 <fieldset>
     <label>Auton<br></label>
