--- a/main.html
+++ b/main.html
@@ -239,7 +239,7 @@ Bars attempted:<br>
     value="true"
     type="checkbox"
     name="entry.1080933142"
-    >&emsp;The robot interacts with the Human Player<br>
+    >&emsp;The Human Player interacts with the robot<br>
 </fieldset>
 <br>
 <h2>Post Game</h2><h4 style="color: gray;">&emsp;Fill this out after the game. Watch the game closely, and take note of important events.</h4>
