hide rule section

--- a/main.html
+++ b/main.html
@@ -225,14 +225,14 @@ Bars attempted:<br>
         name="entry.1277000981"
         >&emsp;During Auton, the robot failed to score points<br>
 </fieldset>
-<fieldset>
-    <label for="Rule Violations?">Rule Violations?<br></label>
+
     <input
         placeholder="0"
         type="number"
         name="entry.1019141500"
+        hidden
         >
-</fieldset>
+
 <fieldset>
     <input
     placeholder="off"
