--- a/main.html
+++ b/main.html
@@ -259,8 +259,8 @@ Bars attempted:<br>
     <textarea rows="2" cols="35" name="entry.711121407" placeholder="No" style="font-size: x-large !important;"></textarea>
 </fieldset>
 <fieldset>
-    <label for="If present, what types of defense was used, and was it effective?">Did the robot use defense? If so, what did they do?<br></label>
-    <textarea rows="2" cols="35" name="entry.309796794" placeholder="No" style="font-size: x-large !important;"></textarea>
+    <label for="If present, what types of defense was used, and was it effective?">Did the robot play defense? If so, what did they do?<br></label>
+    <textarea rows="2" cols="35" name="entry.309796794" placeholder="No" style="font-size: x-large s!important;"></textarea>
 </fieldset>
 <fieldset>
     <label for="Any thoughts about the driving?">Any thoughts about the driving?<br></label>
