--- a/main.html
+++ b/main.html
@@ -244,7 +244,7 @@ Bars attempted:<br>
 <br>
 <h2>Post Game</h2><h4 style="color: gray;">&emsp;Fill this out after the game. Watch the game closely, and take note of important events.</h4>
 <fieldset>
-    <label>How would you estimate the consistency of the team's performance in the auton?</label><br>
+    <label>Does the team seem consistent in auton?</label><br>
     <select
     name="entry.1152778382"
     required>
