--- a/pit.html
+++ b/pit.html
@@ -7,7 +7,7 @@
 <body>
 <div class="container">
 <form 
-    action="pit.php"
+    action="https://jayagra.com/scout/pit.php"
     target="_self"
     method="POST"
     enctype='multipart/form-data'
@@ -58,14 +58,14 @@ id="psw1"
 required>
 </fieldset>-->
 <fieldset>
-    <label for="Event Code">Event Code</label><br>
+    <label for="Event Code">Event Code <span style="color:red">*</span></label><br>
 <select name="entry.event" required>
     <option value="CADA">CADA - Sacramento Regional</option>
     <option value="CASJ">CASJ - Silicon Valley Regional</option>
 </select>
 </fieldset>
 <fieldset>
-<label for="Your Name">Your Name<br></label>
+<label for="Your Name">Your Name <span style="color:red">*</span><br></label>
 <input
 placeholder="Amon Gus"
 type="text"
@@ -74,7 +74,7 @@ required>
 </fieldset>
 
 <fieldset>
-<label for="Number of the Team you are Scouting">Number of the Team you are Scouting<br></label>
+<label for="Number of the Team you are Scouting">Number of the Team you are Scouting <span style="color:red">*</span><br></label>
 <input
     placeholder="766"
     type="number"
@@ -88,7 +88,7 @@ required>
     placeholder="Bears"
     type="text"
     name="entry.215295328"
-    required>
+    >
 </fieldset>
 <h2>Pit Scouting</h2><h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4>
 <fieldset>
@@ -146,30 +146,35 @@ required>
         value="true"
         type="checkbox"
         name="entry.1745221229"
+        class="checkbig"
         >&emsp;The robot can score in the Lower Hub<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.189327560"
+        class="checkbig"
         >&emsp;The robot can climb to the low bar<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.51519363"
+        class="checkbig"
         >&emsp;The robot can climb to the mid bar<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.1343844870"
+        class="checkbig"
         >&emsp;The robot can climb to the high bar<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.332731239"
+        class="checkbig"
         >&emsp;The robot can climb to the traversal bar<br>
 </fieldset>
 <fieldset>
@@ -177,8 +182,12 @@ required>
     <textarea rows="4" cols="50" name="entry.1013139442" placeholder="Team is pretty mid..." style="font-size: x-large !important;"></textarea>
 </fieldset>
 <fieldset>
-    <label>Upload an image</label><br>
-    <input type="file" name="pitimg"/>
+    <label>Upload an image <span style="color:orange">*</span></label><br>
+    <input type="file" name="pitimg1"/>
+    <input type="file" name="pitimg2"/>
+    <input type="file" name="pitimg3"/>
+    <input type="file" name="pitimg4"/>
+    <input type="file" name="pitimg5"/>
 </fieldset>
 <br>
 <p style="text-align:center">
